--- a/Mpolice/app/src/main/res/layout/mpolice_card.xml
+++ b/Mpolice/app/src/main/res/layout/mpolice_card.xml
@@ -7,12 +7,13 @@
     <android.support.v7.widget.CardView
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:id="@+id/cardView">
+        android:id="@+id/cardView"
+        android:background="#ff0000">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="#5e53bb">
+            android:background="#ff0004">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -21,7 +22,9 @@
                 android:textSize="20sp"
                 android:autoText="false"
                 android:textAllCaps="true"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:textColorHighlight="#ffffff"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -29,7 +32,8 @@
                 android:text="@string/description"
                 android:id="@+id/description"
                 android:textSize="20sp"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -37,7 +41,8 @@
                 android:text="@string/owner"
                 android:id="@+id/owner"
                 android:textSize="20sp"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -45,7 +50,8 @@
                 android:text="@string/status"
                 android:id="@+id/status"
                 android:textSize="20sp"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:textStyle="bold" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
