--- a/Mpolice/app/src/main/res/layout/car_details.xml
+++ b/Mpolice/app/src/main/res/layout/car_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="match_parent">
@@ -7,6 +8,13 @@
     <android.support.v7.widget.CardView
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
+        card_view:cardCornerRadius="4dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="5dp"
+        card_view:contentPadding="10dp"
+        android:background="?android:attr/selectableItemBackground"
         android:id="@+id/cardView">
         <LinearLayout
             android:layout_width="match_parent"
