--- a/Mpolice/app/src/main/res/layout/mpolice_card.xml
+++ b/Mpolice/app/src/main/res/layout/mpolice_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="match_parent">
@@ -8,41 +9,38 @@
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:id="@+id/cardView"
-        android:background="#ff0000">
+        card_view:cardCornerRadius="4dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="5dp"
+        android:padding="5dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="#ff0004">
+            android:padding="5dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/number_plate"
                 android:id="@+id/number_plate"
-                android:textSize="20sp"
-                android:autoText="false"
                 android:textAllCaps="true"
-                android:textColor="#ffffff"
-                android:textColorHighlight="#ffffff"
-                android:textStyle="bold" />
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/description"
                 android:id="@+id/description"
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:textStyle="bold" />
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/owner"
                 android:id="@+id/owner"
-                android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:textStyle="bold" />
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -50,8 +48,8 @@
                 android:text="@string/status"
                 android:id="@+id/status"
                 android:textSize="20sp"
-                android:textColor="#ffffff"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="#e81818" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
