--- a/Mpolice/app/src/main/res/layout/car_details.xml
+++ b/Mpolice/app/src/main/res/layout/car_details.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="5dp"
         card_view:contentPadding="10dp"
         android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
         android:id="@+id/cardView">
         <LinearLayout
             android:layout_width="match_parent"
