--- a/Mpolice/app/src/main/res/layout/mpolice_card.xml
+++ b/Mpolice/app/src/main/res/layout/mpolice_card.xml
@@ -14,7 +14,9 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="5dp"
-        android:padding="5dp">
+        android:padding="5dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
