--- a/Mpolice/app/src/main/res/layout/activity_main.xml
+++ b/Mpolice/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,9 @@
     <com.digits.sdk.android.DigitsAuthButton
         android:id="@+id/auth_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="161dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
