--- a/Mpolice/app/src/main/res/layout/splash_screen.xml
+++ b/Mpolice/app/src/main/res/layout/splash_screen.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/imageView"
-        android:background="@drawable/policee"
+        android:background="@drawable/police"
         android:contentDescription="splash_image" />
 
     <TextView
